Summary: TBR-10476 toggle input no longer opens accordion
Summary:
arrows centered at all breakpoints

user dropdown location no longer relies on user name length

minor modification to dropdown location on smaller screens

TBR-10476 fixed cookie modal arrow breakpoint problems

TBR-10476 modal icons are center

TBR-10476 toggle input no longer opens accordion

arrows centered at all breakpoints

user dropdown location no longer relies on user name length

minor modification to dropdown location on smaller screens

TBR-10476 fixed cookie modal arrow breakpoint problems

cookie modal arrows no longer overlap text

TBR-10476 code review clean up

TBR-10476 code review clean up

Test Plan: TBR-10476 - Review

Reviewers: motiejus.labzentis

Reviewed By: motiejus.labzentis

Differential Revision: https://ph.tonybet.com/D16717

--- a/styles/bnl/stylesheets/scss/_custom.scss
+++ b/styles/bnl/stylesheets/scss/_custom.scss
@@ -293,13 +293,27 @@ a:hover {
   width: calc(100% + 70px);
   margin-left: -35px;
   $self: &;
+  &__content {
+    padding-right: 50px;
+  }
   &__toggle {
     width: 100%;
+    display: flex;
+    align-items: center;
+    background-color: inherit;
+    border: none;
+  }
+  &__card {
+    width: 100%;
     padding: 10px 35px;
+    padding-right: 0;
     border: none;
     background: transparent;
     border-top: 1px solid $gray-100;
     border-bottom: 1px solid $gray-100;
+    @media (max-width: 400px){
+      padding-left: 10px;
+    }
     .icon-check {
       position: relative;
       color: $white;
@@ -315,20 +329,18 @@ a:hover {
     p {
       padding: 15px 35px;
     }
-    &.show {
-      + #{ $self }__icon {
-        transform: rotate(180deg);
-      }
-    }
   }
   &__icon {
     position: absolute;
-    top: 12px;
-    right: 7px;
+    right: 0;
+    margin-right: 10px;
     font-size: 30px;
     color: $gray-200;
     transition: transform 0.2s;
     pointer-events: none;
+    &.open {
+        transform: rotate(180deg);
+    }
   }
 }
 
