--- a/styles/bnl/stylesheets/scss/_header.scss
+++ b/styles/bnl/stylesheets/scss/_header.scss
@@ -512,7 +512,7 @@
     @include media-breakpoint-down(lg) {
       left: unset;
       transform: none;
-      right: -5%;
+      right: -5.5%;
     }
     &__wrp {
       padding: 10px 20px 0 20px;
